deploy/overlays/prd/prd-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: prd-ingress
spec:
  rules:
  - host: prd.wp.k8s-5.sa
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
        path: /
  tls:
  - hosts:
    - prd.wp.k8s-5.sa
    secretName: mysql-pass
